--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,8 @@ configuring algorithms, in other words, capable of adapting configurations to th
     year = {2022},
     booktitle = {Workshop on Meta-Learning (MetaLearn@NeurIPS'22)},
     bibtex_show={true},
-    pdf = {https://openreview.net/forum?id=RyAl60VhTcG},
+    openreview = {RyAl60VhTcG},
+    pdf = {paper/22-metalearn-autorl_bench_1_0.pdf},
     abstract={It is well established that Reinforcement Learning (RL) 
 is very brittle and sensitive to the choice of hyperparameters. This prevents RL methods from being usable out of the box.
 The field of automated RL (AutoRL) aims at automatically configuring the RL pipeline, to both make RL usable by a broader audience, as well as reveal its full potential. 
@@ -40,7 +41,8 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     year = {2022},
     booktitle = {Workshop on Meta-Learning (MetaLearn@NeurIPS'22)},
     bibtex_show={true},
-    pdf = {https://openreview.net/forum?id=oJp7uTL7ox-},
+    openreview = {oJp7uTL7ox-},
+    pdf = {paper/22-metalearn-gray_box_gaussian_processes_fo.pdf},
     abstract = {Despite having achieved spectacular milestones in an array of important real-world applications, most Reinforcement Learning (RL) methods are very brittle concerning their hyperparameters. Notwithstanding the crucial importance of setting the hyperparameters in training state-of-the-art agents, the task of hyperparameter optimization (HPO) in RL is understudied. In this paper, we propose a novel gray-box Bayesian Optimization technique for HPO in RL, that enriches Gaussian Processes with reward curve estimations based on generalized logistic functions. We thus about the performance of learning algorithms, transferring information across configurations and about epochs of the learning algorithm. In a very large-scale experimental protocol, comprising 5 popular RL methods (DDPG, A2C, PPO, SAC, TD3), 22 environments (OpenAI Gym: Mujoco, Atari, Classic Control), and 7 HPO baselines, we demonstrate that our method significantly outperforms current HPO practices in RL.}
 }
 
@@ -288,7 +290,7 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     bibtex_show={true},
     booktitle = {International Conference on Learning Representations (ICLR) 2021},
     journal = {International Conference on Learning Representations (ICLR) 2021},
-    website = {https://openreview.net/forum?id=hSjxQ3B7GWq},
+    openreview = {hSjxQ3B7GWq},
     code = {https://github.com/automl/SEARL},
     arxiv = {2009.01555},
     pdf = {https://arxiv.org/pdf/2009.01555.pdf},
