MAINT make pyscript version selectable

--- a/_posts/2022-05-21-gecco.md
+++ b/_posts/2022-05-21-gecco.md
@@ -25,7 +25,9 @@ authors:
     affiliations:
       name: Sorbonne Université, CNRS, LIP6
 
-# Specify which packages to load for pyscript
+# Specify which packages to load for pyscript with specified pyscript version (see https://github.com/pyscript/pyscript/tags)
+py-ver: 2022.09.1
+
 py-env:
   - numpy
 
