--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -81,6 +81,7 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     title = {Theory-inspired Parameter Control Benchmarks for Dynamic Algorithm Configuration},
     author = {André Biedenkapp* and Nguyen Dang* and Martin S. Krejca* and Frank Hutter and Carola Doerr},
     year = {2022},
+    pages = {766--775},
     arxiv = {arXiv:2202.03259},
     booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference ({GECCO}'22)},
     pdf = {paper/22-gecco.pdf},
@@ -111,11 +112,12 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     abstract = {The combination of Reinforcement Learning (RL) with deep learning has led to a series of impressive feats, with many believing (deep) RL provides a path towards generally capable agents. However, the success of RL agents is often highly sensitive to design choices in the training process, which may require tedious and error-prone manual tuning. This makes it challenging to use RL for new problems, while also limits its full potential. In many other areas of machine learning, AutoML has shown it is possible to automate such design choices and has also yielded promising initial results when applied to RL. However, Automated Reinforcement Learning (AutoRL) involves not only standard applications of AutoML but also includes additional challenges unique to RL, that naturally produce a different set of methods. As such, AutoRL has been emerging as an important area of research in RL, providing promise in a variety of applications from RNA design to playing games such as Go. Given the diversity of methods and environments considered in RL, much of the research has been conducted in distinct subfields, ranging from meta-learning to evolution. In this survey we seek to unify the field of AutoRL, we provide a common taxonomy, discuss each area in detail and pose open problems which would be of interest to researchers going forward.}
 }
 
-@article{adriaens-arxiv22a,
+@article{adriaens-jair23a,
     title = {Automated Dynamic Algorithm Configuration},
     author = {Steven Adriaensen and André Biedenkapp and Gresa Shala and Noor Awad and Theresa Eimer and Marius Lindauer and Frank Hutter},
-    year = {2022},
-    journal = {arXiv:2205.13881 [cs.AI]},
+    year = {2023},
+    journal = {Journal of Artificial Intelligence Research (JAIR)},
+    note={to appear},
     bibtex_show={true},
     arxiv = {arXiv:2205.13881},
     pdf = {https://arxiv.org/pdf/2205.13881.pdf},
@@ -171,6 +173,7 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     booktitle = {Proceedings of the Thirtieth International Joint Conference on
     Artificial Intelligence (IJCAI'21)},
     bibtex_show={true},
+    pages     = {1668--1674},
     publisher = {ijcai.org},
     website = {https://www.automl.org/automated-algorithm-design/dac/},
     code = {https://github.com/automl/DACBench},
@@ -228,6 +231,8 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     author = {André Biedenkapp and Raghu Rajan and Frank Hutter and Marius Lindauer},
     year = {2021},
     bibtex_show={true},
+    volume    = {139},
+    pages     = {914--924},
     booktitle = {Proceedings of the 38th International Conference on Machine Learning (ICML 2021)},
     code = {https://github.com/automl/TempoRL},
     arxiv = {2106.05262},
@@ -244,6 +249,8 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     title = {Self-Paced Context Evaluations for Contextual Reinforcement Learning},
     author = {Theresa Eimer and André Biedenkapp and Frank Hutter and Marius Lindauer},
     year = {2021},
+    volume    = {139},
+    pages     = {2948--2958},
     bibtex_show={true},
     booktitle = {Proceedings of the 38th International Conference on Machine Learning (ICML 2021)},
     code = {https://github.com/automl/SPaCE},
@@ -304,6 +311,9 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     author = {Baohe Zhang and Raghu Rajan and Luis Pineda and Nathan Lambert and André Biedenkapp and Kurtland Chua and Frank Hutter and Roberto Calandra},
     year = {2021},
     bibtex_show={true},
+    volume    = {130},
+    pages     = {4015--4023},
+    publisher = {{PMLR}},
     booktitle = {Proceedings of the 24th International Conference on Artificial Intelligence and Statistics (AISTATS)'21},
     pdf = {paper/zhang21n.pdf},
     supp = {http://proceedings.mlr.press/v130/zhang21n/zhang21n-supp.zip},
@@ -421,6 +431,10 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     bibtex_show={true},
     author = {Gresa Shala* and André Biedenkapp* and Noor Awad and Steven Adriaensen and Marius Lindauer and Frank Hutter},
     year = {2020},
+    series    = {Lecture Notes in Computer Science},
+    volume    = {12269},
+    pages     = {691--706},
+    publisher = {Springer},
     booktitle = {Proceedings of the Sixteenth International Conference on Parallel Problem Solving from Nature (PPSN'20)},
     website = {https://www.automl.org/automated-algorithm-design/dac/dac-es/},
     code = {https://github.com/automl/LTO-CMA},
@@ -503,6 +517,7 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     author = {André Biedenkapp and Furkan H Bozkurt and Theresa Eimer and Frank Hutter and Marius Lindauer},
     year = {2020},
     bibtex_show={true},
+    pages     = {427--434},
     booktitle = {Proceedings of the Twenty-fourth European Conference on Artificial Intelligence (ECAI'20)},
     talk =  {https://www.youtube.com/watch?v=wxPYtSGT05s&feature=youtu.be},
     code = {https://github.com/automl/DAC},
@@ -577,6 +592,9 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     author = {André Biedenkapp and Joshua Marben and Marius Lindauer and Frank Hutter},
     year = {2018},
     bibtex_show={true},
+    volume    = {11353},
+    pages     = {115--130},
+    publisher = {Springer},
     booktitle = {Proceedings of the International Conference on Learning and Intelligent Optimization (LION'18)},
     pdf       = {paper/18-LION12-CAVE.pdf},
     slides    = {slides/18-LION12-CAVE-slides.pdf},
