Maint JAIR DAC paper info

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,21 @@
 ---
 ---
+@article{adriaens-jair22a,
+    title = {Automated Dynamic Algorithm Configuration},
+    author = {Steven Adriaensen and André Biedenkapp and Gresa Shala and Noor Awad and Theresa Eimer and Marius Lindauer and Frank Hutter},
+    year = {2022},
+    journal = {Journal of Artificial Intelligence Research (JAIR)},
+    volume = {75},
+    pages = {1633--1699},
+    bibtex_show={true},
+    arxiv = {arXiv:2205.13881},
+    pdf = {https://www.jair.org/index.php/jair/article/view/13922/26882},
+    doi = {https://doi.org/10.1613/jair.1.13922},
+    website = {https://www.automl.org/automated-algorithm-design/dac/},
+    code = {https://github.com/automl/2022_JAIR_DAC_experiments},
+    abstract = {The performance of an algorithm often critically depends on its parameter configuration. While a variety of automated algorithm configuration methods have been proposed to relieve users from the tedious and error-prone task of manually tuning parameters, there is still a lot of untapped potential as the learned configuration is static, i.e., parameter settings remain fixed throughout the run. However, it has been shown that some algorithm parameters are best adjusted dynamically during execution, e.g., to adapt to the current part of the optimization landscape. Thus far, this is most commonly achieved through hand-crafted heuristics. A promising recent alternative is to automatically learn such dynamic parameter adaptation policies from data. In this article, we give the first comprehensive account of this new field of automated dynamic algorithm configuration (DAC), present a series of recent advances, and provide a solid foundation for future research in this field. Specifically, we (i) situate DAC in the broader historical context of AI research; (ii) formalize DAC as a computational problem; (iii) identify the methods used in prior-art to tackle this problem; (iv) conduct empirical case studies for using DAC in evolutionary optimization, AI planning, and machine learning.}
+}
+
 @PhdThesis{biedenkapp22,
 title = {Dynamic Algorithm Configuration by Reinforcement Learning},
 author = {André Biedenkapp},
@@ -110,20 +126,6 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     pdf = {paper/22-JAIR-AutoRL.pdf},
     selected = {true},
     abstract = {The combination of Reinforcement Learning (RL) with deep learning has led to a series of impressive feats, with many believing (deep) RL provides a path towards generally capable agents. However, the success of RL agents is often highly sensitive to design choices in the training process, which may require tedious and error-prone manual tuning. This makes it challenging to use RL for new problems, while also limits its full potential. In many other areas of machine learning, AutoML has shown it is possible to automate such design choices and has also yielded promising initial results when applied to RL. However, Automated Reinforcement Learning (AutoRL) involves not only standard applications of AutoML but also includes additional challenges unique to RL, that naturally produce a different set of methods. As such, AutoRL has been emerging as an important area of research in RL, providing promise in a variety of applications from RNA design to playing games such as Go. Given the diversity of methods and environments considered in RL, much of the research has been conducted in distinct subfields, ranging from meta-learning to evolution. In this survey we seek to unify the field of AutoRL, we provide a common taxonomy, discuss each area in detail and pose open problems which would be of interest to researchers going forward.}
-}
-
-@article{adriaens-jair23a,
-    title = {Automated Dynamic Algorithm Configuration},
-    author = {Steven Adriaensen and André Biedenkapp and Gresa Shala and Noor Awad and Theresa Eimer and Marius Lindauer and Frank Hutter},
-    year = {2023},
-    journal = {Journal of Artificial Intelligence Research (JAIR)},
-    note={to appear},
-    bibtex_show={true},
-    arxiv = {arXiv:2205.13881},
-    pdf = {https://arxiv.org/pdf/2205.13881.pdf},
-    website = {https://www.automl.org/automated-algorithm-design/dac/},
-    code = {https://github.com/automl/2022_JAIR_DAC_experiments},
-    abstract = {The performance of an algorithm often critically depends on its parameter configuration. While a variety of automated algorithm configuration methods have been proposed to relieve users from the tedious and error-prone task of manually tuning parameters, there is still a lot of untapped potential as the learned configuration is static, i.e., parameter settings remain fixed throughout the run. However, it has been shown that some algorithm parameters are best adjusted dynamically during execution, e.g., to adapt to the current part of the optimization landscape. Thus far, this is most commonly achieved through hand-crafted heuristics. A promising recent alternative is to automatically learn such dynamic parameter adaptation policies from data. In this article, we give the first comprehensive account of this new field of automated dynamic algorithm configuration (DAC), present a series of recent advances, and provide a solid foundation for future research in this field. Specifically, we (i) situate DAC in the broader historical context of AI research; (ii) formalize DAC as a computational problem; (iii) identify the methods used in prior-art to tackle this problem; (iv) conduct empirical case studies for using DAC in evolutionary optimization, AI planning, and machine learning.}
 }
 
 @article{benjamins-arxiv22a,
