--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,16 @@
 ---
 ---
+@inproceedings{shala-iclr23a,
+    title = {Gray-Box Gaussian Processes for Automated Reinforcement Learning},
+    author = {Gresa Shala and André Biedenkapp and Frank Hutter and Josif Grabocka},
+    year = {2023},
+    booktitle = {International Conference on Learning Representations (ICLR'23)},
+    bibtex_show={true},
+    openreview={rmoMvptXK7M},
+    abstract = {Despite having achieved spectacular milestones in an array of important real-world applications, most Reinforcement Learning (RL) methods are very brittle concerning their hyperparameters. Notwithstanding the crucial importance of setting the hyperparameters in training state-of-the-art agents, the task of hyperparameter optimization (HPO) in RL is understudied. In this paper, we propose a novel gray-box Bayesian Optimization technique for HPO in RL, that enriches Gaussian Processes with reward curve estimations based on generalized logistic functions. In a very large-scale experimental protocol, comprising 5 popular RL methods (DDPG, A2C, PPO, SAC, TD3), dozens of environments (Atari, Mujoco), and 7 HPO baselines, we demonstrate that our method significantly outperforms current HPO practices in RL.},
+    note = {To appear}
+}
+
 @article{adriaens-jair22a,
     title = {Automated Dynamic Algorithm Configuration},
     author = {Steven Adriaensen and André Biedenkapp and Gresa Shala and Noor Awad and Theresa Eimer and Marius Lindauer and Frank Hutter},
