--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,33 @@
 ---
 ---
+@article{rajan-jair23a,
+title = "MDP Playground: An Analysis and Debug
+Testbed for Reinforcement Learning",
+abstract = "We present MDP Playground, a testbed for Reinforcement Learning (RL) agents with
+dimensions of hardness that can be controlled independently to challenge agents in different
+ways and obtain varying degrees of hardness in toy and complex RL environments. We
+consider and allow control over a wide variety of dimensions, including delayed rewards,
+sequence lengths, reward density, stochasticity, image representations, irrelevant features,
+time unit, action range and more. We define a parameterised collection of fast-to-run toy
+environments in OpenAI Gym by varying these dimensions and propose to use these to
+understand agents better. We then show how to design experiments using MDP Playground
+to gain insights on the toy environments. We also provide wrappers that can inject many of
+these dimensions into any Gym environment. We experiment with these wrappers on Atari
+and Mujoco to allow for understanding the effects of these dimensions on environments that
+are more complex than the toy environments. We also compare the effect of the dimensions
+on the toy and complex environments. Finally, we show how to use MDP Playground to
+debug agents, to study the interaction of multiple dimensions and describe further use-cases.",
+author = "Raghu Rajan and Jessica Lizeth Borja Diaz and Suresh Guttikonda and Fabio Ferreira and André Biedenkapp and Jan Ole von Hartz and Frank Hutter",
+year = "2023",
+journal = "Journal of Artificial Intelligence Research (JAIR)",
+bibtex_show={true},
+arxiv = {arXiv:1909.07750},
+code = {https://github.com/automl/mdp-playground},
+volume = {77},
+pages = {821--890},
+}
+
+
 @article{benjamins-tmlr23a,
 title = "Contextualize Me – The Case for Context in Reinforcement Learning",
 abstract = "While Reinforcement Learning (RL) has made great strides towards solving increasingly
