--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,6 +23,8 @@ journal = "Journal of Artificial Intelligence Research (JAIR)",
 bibtex_show={true},
 arxiv = {arXiv:1909.07750},
 code = {https://github.com/automl/mdp-playground},
+pdf = {https://www.jair.org/index.php/jair/article/view/14314/26946},
+doi = {https://doi.org/10.1613/jair.1.14314},
 volume = {77},
 pages = {821--890},
 }
