--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@ bibtex_show={true},
 arxiv = {arXiv:1909.07750},
 code = {https://github.com/automl/mdp-playground},
 pdf = {https://www.jair.org/index.php/jair/article/view/14314/26946},
-doi = {https://doi.org/10.1613/jair.1.14314},
+doi = {10.1613/jair.1.14314},
 volume = {77},
 pages = {821--890},
 }
@@ -81,7 +81,7 @@ code = {https://github.com/automl/CARL},
     bibtex_show={true},
     arxiv = {arXiv:2205.13881},
     pdf = {https://www.jair.org/index.php/jair/article/view/13922/26882},
-    doi = {https://doi.org/10.1613/jair.1.13922},
+    doi = {10.1613/jair.1.13922},
     website = {https://www.automl.org/automated-algorithm-design/dac/},
     code = {https://github.com/automl/2022_JAIR_DAC_experiments},
     abstract = {The performance of an algorithm often critically depends on its parameter configuration. While a variety of automated algorithm configuration methods have been proposed to relieve users from the tedious and error-prone task of manually tuning parameters, there is still a lot of untapped potential as the learned configuration is static, i.e., parameter settings remain fixed throughout the run. However, it has been shown that some algorithm parameters are best adjusted dynamically during execution, e.g., to adapt to the current part of the optimization landscape. Thus far, this is most commonly achieved through hand-crafted heuristics. A promising recent alternative is to automatically learn such dynamic parameter adaptation policies from data. In this article, we give the first comprehensive account of this new field of automated dynamic algorithm configuration (DAC), present a series of recent advances, and provide a solid foundation for future research in this field. Specifically, we (i) situate DAC in the broader historical context of AI research; (ii) formalize DAC as a computational problem; (iii) identify the methods used in prior-art to tackle this problem; (iv) conduct empirical case studies for using DAC in evolutionary optimization, AI planning, and machine learning.}
