ADD posters and news about EWRL/AutoML conf presentations

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,6 +56,8 @@ arxiv = {arXiv:2202.04500},
 website = {https://www.automl.org/contextual-rl/},
 pdf = {paper/23-TMLR-CARL.pdf},
 code = {https://github.com/automl/CARL},
+poster = {poster/EcoRL21_CARL.pdf},
+talk = {https://www.youtube.com/watch?v=V32MMhBPDBk}
 }
 
 
@@ -196,7 +198,8 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     doi = {10.1613/jair.1.13596},
     pdf = {paper/22-JAIR-AutoRL.pdf},
     selected = {true},
-    abstract = {The combination of Reinforcement Learning (RL) with deep learning has led to a series of impressive feats, with many believing (deep) RL provides a path towards generally capable agents. However, the success of RL agents is often highly sensitive to design choices in the training process, which may require tedious and error-prone manual tuning. This makes it challenging to use RL for new problems, while also limits its full potential. In many other areas of machine learning, AutoML has shown it is possible to automate such design choices and has also yielded promising initial results when applied to RL. However, Automated Reinforcement Learning (AutoRL) involves not only standard applications of AutoML but also includes additional challenges unique to RL, that naturally produce a different set of methods. As such, AutoRL has been emerging as an important area of research in RL, providing promise in a variety of applications from RNA design to playing games such as Go. Given the diversity of methods and environments considered in RL, much of the research has been conducted in distinct subfields, ranging from meta-learning to evolution. In this survey we seek to unify the field of AutoRL, we provide a common taxonomy, discuss each area in detail and pose open problems which would be of interest to researchers going forward.}
+    abstract = {The combination of Reinforcement Learning (RL) with deep learning has led to a series of impressive feats, with many believing (deep) RL provides a path towards generally capable agents. However, the success of RL agents is often highly sensitive to design choices in the training process, which may require tedious and error-prone manual tuning. This makes it challenging to use RL for new problems, while also limits its full potential. In many other areas of machine learning, AutoML has shown it is possible to automate such design choices and has also yielded promising initial results when applied to RL. However, Automated Reinforcement Learning (AutoRL) involves not only standard applications of AutoML but also includes additional challenges unique to RL, that naturally produce a different set of methods. As such, AutoRL has been emerging as an important area of research in RL, providing promise in a variety of applications from RNA design to playing games such as Go. Given the diversity of methods and environments considered in RL, much of the research has been conducted in distinct subfields, ranging from meta-learning to evolution. In this survey we seek to unify the field of AutoRL, we provide a common taxonomy, discuss each area in detail and pose open problems which would be of interest to researchers going forward.},
+    poster = {poster/AutoRL_Survey_JAIR_2022_building_74.pdf},
 }
 
 @article{benjamins-arxiv22a,
@@ -315,6 +318,7 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     slides = {slides/2021_TempoRL@ICML.pdf},
     blog = {https://andrebiedenkapp.github.io/blog/2022/temporl},
     selected = {true},
+    poster = {poster/tempoRL_poster.pdf},
     abstract = {Reinforcement learning is a powerful approach to learn behaviour through interactions with an environment. However, behaviours are usually learned in a purely reactive fashion, where an appropriate action is selected based on an observation. In this form, it is challenging to learn when it is necessary to execute new decisions. This makes learning inefficient, especially in environments that need various degrees of fine and coarse control. To address this, we propose a proactive setting in which the agent not only selects an action in a state but also for how long to commit to that action. Our TempoRL approach introduces skip connections between states and learns a skip-policy for repeating the same action along these skips. We demonstrate the effectiveness of TempoRL on a variety of traditional and deep RL environments, showing that our approach is capable of learning successful policies up to an order of magnitude faster than vanilla Q-learning.}
 }
 
@@ -393,6 +397,7 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     blog = {https://bair.berkeley.edu/blog/2021/04/19/mbrl/},
     talk = {https://www.youtube.com/watch?v=lH0mgnjr1v4},
     arxiv = {2102.13651},
+    poster = {poster/HPO_in_MBRL_AISTATS_2021_poster.pdf},
     code = {https://github.com/automl/HPO_for_RL},
     abstract = {Model-based Reinforcement Learning
     (MBRL) is a promising framework for
