--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -200,6 +200,7 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     selected = {true},
     abstract = {The combination of Reinforcement Learning (RL) with deep learning has led to a series of impressive feats, with many believing (deep) RL provides a path towards generally capable agents. However, the success of RL agents is often highly sensitive to design choices in the training process, which may require tedious and error-prone manual tuning. This makes it challenging to use RL for new problems, while also limits its full potential. In many other areas of machine learning, AutoML has shown it is possible to automate such design choices and has also yielded promising initial results when applied to RL. However, Automated Reinforcement Learning (AutoRL) involves not only standard applications of AutoML but also includes additional challenges unique to RL, that naturally produce a different set of methods. As such, AutoRL has been emerging as an important area of research in RL, providing promise in a variety of applications from RNA design to playing games such as Go. Given the diversity of methods and environments considered in RL, much of the research has been conducted in distinct subfields, ranging from meta-learning to evolution. In this survey we seek to unify the field of AutoRL, we provide a common taxonomy, discuss each area in detail and pose open problems which would be of interest to researchers going forward.},
     poster = {poster/AutoRL_Survey_JAIR_2022_building_74.pdf},
+    talk = {https://www.youtube.com/watch?v=6TcSGstpSUE&list=PLp7L30nGpKM8LnCrbnT81KjBn5uxB6u8n&index=3},
 }
 
 @article{benjamins-arxiv22a,
@@ -226,6 +227,7 @@ To alleviate these issues, we propose the first tabular AutoRL Benchmark for stu
     arxiv = {2109.09831},
     code = {https://github.com/automl/SMAC3},
     pdf = {paper/21-0888.pdf},
+    talk = {https://www.youtube.com/watch?v=-qdiIRXT-14&list=PLp7L30nGpKM8LnCrbnT81KjBn5uxB6u8n&index=7},
     abstract = {Algorithm parameters, in particular hyperparameters of machine learning algorithms, can substantially impact their performance. To support users in determining well-performing hyperparameter configurations for their algorithms, datasets and applications at hand, SMAC3 offers a robust and flexible framework for Bayesian Optimization, which can improve performance within a few evaluations. It offers several facades and pre-sets for typical use cases, such as optimizing hyperparameters, solving low dimensional continuous (artificial) global optimization problems and configuring algorithms to perform well across multiple problem instances. The SMAC3 package is available under a permissive BSD-license at https://github.com/automl/SMAC3. }
 }
 
