New paper + CV update

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,22 @@
 ---
 ---
+@article{shala-arxiv24a,
+title = "Hierarchical Transformers are Efficient Meta-Reinforcement Learners",
+abstract = "We introduce Hierarchical Transformers for Meta-Reinforcement Learning (HTrMRL), a powerful online meta-reinforcement learning approach.
+HTrMRL aims to address the challenge of enabling reinforcement learning agents to perform effectively in previously unseen tasks.
+We demonstrate how past episodes serve as a rich source of information, which our model effectively distills and applies to new contexts.
+Our learned algorithm is capable of outperforming the previous state-of-the-art and provides more efficient meta-training while significantly improving generalization capabilities.
+Experimental results, obtained across various simulated tasks of the Meta-World Benchmark, indicate a significant improvement in learning efficiency and adaptability compared to the state-of-the-art on a variety of tasks.
+Our approach not only enhances the agent's ability to generalize from limited data but also paves the way for more robust and versatile AI systems.",
+author = "Gresa Shala and André Biedenkapp and Josif Grabocka",
+year = "2024",
+bibtex_show={true},
+journal = {arXiv:2402.06402},
+bibtex_show={true},
+arxiv = {arXiv:2402.06402},
+code = {https://github.com/releaunifreiburg/HT4MRL.git},
+}
+
 @article{rajan-jair23a,
 title = "MDP Playground: An Analysis and Debug
 Testbed for Reinforcement Learning",
