--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,27 @@
 ---
 ---
+@article{prasanna-arxiv24a,
+title = "Dreaming of Many Worlds: Learning Contextual World Models Aids Zero-Shot Generalization",
+abstract = "Zero-shot generalization (ZSG) to unseen dynamics is a major challenge for creating generally capable embodied
+ agents. To address the broader challenge, we start with the simpler setting of contextual reinforcement learning (cRL),
+ assuming observability of the context values that parameterize the variation in the system’s dynamics, such as the mass
+ or dimensions of a robot, without making further simplifying assumptions about the observability of the Markovian state.
+ Toward the goal of ZSG to unseen variation in context, we propose the contextual recurrent state-space model (cRSSM),
+ which introduces changes to the world model of the Dreamer (v3) (Hafner et al., 2023). This allows the world model to
+ incorporate context for inferring latent Markovian states from the observations and modeling the latent dynamics. Our
+ experiments show that such systematic incorporation of the context improves the ZSG of the policies trained on the
+ “dreams” of the world model. We further find qualitatively that our approach allows Dreamer to disentangle the latent
+ state from context, allowing it to extrapolate its dreams to the many worlds of unseen contexts. The code for all our
+ experiments is available at https://github.com/sai-prasanna/dreaming_of_many_worlds.",
+author = "Sai Prasanna* and Karim Farid* and Raghu Rajan and André Biedenkapp",
+year = "2024",
+bibtex_show={true},
+journal = {arXiv:2403.10967},
+bibtex_show={true},
+arxiv = {arXiv:2403.10967},
+code = {https://github.com/sai-prasanna/dreaming_of_many_worlds},
+}
+
 @article{shala-arxiv24a,
 title = "Hierarchical Transformers are Efficient Meta-Reinforcement Learners",
 abstract = "We introduce Hierarchical Transformers for Meta-Reinforcement Learning (HTrMRL), a powerful online meta-reinforcement learning approach.
@@ -12,7 +34,6 @@ author = "Gresa Shala and André Biedenkapp and Josif Grabocka",
 year = "2024",
 bibtex_show={true},
 journal = {arXiv:2402.06402},
-bibtex_show={true},
 arxiv = {arXiv:2402.06402},
 code = {https://github.com/releaunifreiburg/HT4MRL.git},
 }
