--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,24 @@
 ---
 ---
+@article{ndir-arxiv24a,
+  title = {Inferring Behavior-Specific Context Improves Zero-Shot Generalization in Reinforcement Learning},
+  author = {Tidiane Camaret Ndir and André Biedenkapp and Noor Awad},
+  year = {2024},
+  journal = {arXiv:2404.09521},
+  arxiv = {arXiv:2404.09521},
+  bibtex_show={true},
+  code = {https://github.com/tidiane-camaret/contextual_rl_zero_shot},
+  abstract = "In this work, we address the challenge of zero-shot generalization (ZSG) in Reinforcement Learning (RL),
+  where agents must adapt to entirely novel environments without additional training. We argue that understanding and
+  utilizing contextual cues, such as the gravity level of the environment, is critical for robust generalization, and we
+  propose to integrate the learning of context representations directly with policy learning. Our algorithm demonstrates
+  improved generalization on various simulated domains, outperforming prior context-learning techniques in zero-shot
+  settings. By jointly learning policy and context, our method acquires behavior-specific context representations,
+  enabling adaptation to unseen environments and marks progress towards reinforcement learning systems that generalize
+  across diverse real-world tasks. Our code and experiments are available at
+  https://github.com/tidiane-camaret/contextual_rl_zero_shot",
+}
+
 @article{prasanna-arxiv24a,
 title = "Dreaming of Many Worlds: Learning Contextual World Models Aids Zero-Shot Generalization",
 abstract = "Zero-shot generalization (ZSG) to unseen dynamics is a major challenge for creating generally capable embodied
@@ -17,8 +36,8 @@ author = "Sai Prasanna* and Karim Farid* and Raghu Rajan and André Biedenkapp",
 year = "2024",
 bibtex_show={true},
 journal = {arXiv:2403.10967},
-bibtex_show={true},
 arxiv = {arXiv:2403.10967},
+joint_first={true},
 code = {https://github.com/sai-prasanna/dreaming_of_many_worlds},
 }
 
