ADD AutoML conf paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,26 @@
 ---
 ---
+
+@inproceedings{shala-automl24a,
+    title = {HPO-RL-Bench: A Zero-Cost Benchmark for HPO in Reinforcement Learning},
+    author = {Gresa Shala and Sebastian Pineda Arango and André Biedenkapp and Frank Hutter and Josif Grabocka},
+    year = {2024},
+    booktitle = {International Conference on Automated Machine Learning (AutoML'24)},
+    bibtex_show={true},
+    openreview = {MlB61zPAeR},
+    note = {To appear},
+    abstract={Despite the undeniable importance of optimizing the hyperparameters of RL algorithms, existing
+    state-of-the-art Hyperparameter Optimization (HPO) techniques are not frequently utilized by RL researchers.
+    To catalyze HPO research in RL, we present a new large-scale benchmark that includes pre-computed reward curve
+    evaluations of hyperparameter configurations for six established RL algorithms (PPO, DDPG, A2C, SAC, TD3, DQN) on
+    22 environments (Atari, Mujoco, Control), repeated for multiple seeds. We exhaustively computed the reward curves
+    of all possible combinations of hyperparameters for the considered hyperparameter spaces for each RL algorithm in
+    each environment. As a result, our benchmark permits zero-cost experiments for deploying and comparing new HPO
+    methods. In addition, the benchmark offers a set of integrated HPO methods, enabling plug-and-play tuning of the
+    hyperparameters of new RL algorithms, while pre-computed evaluations allow a zero-cost comparison of a new RL
+    algorithm against the tuned RL baselines in our benchmark.}
+}
+
 @article{ndir-arxiv24a,
   title = {Inferring Behavior-Specific Context Improves Zero-Shot Generalization in Reinforcement Learning},
   author = {Tidiane Camaret Ndir and André Biedenkapp and Noor Awad},
