--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
     title = {HPO-RL-Bench: A Zero-Cost Benchmark for HPO in Reinforcement Learning},
     author = {Gresa Shala and Sebastian Pineda Arango and André Biedenkapp and Frank Hutter and Josif Grabocka},
     year = {2024},
-    booktitle = {International Conference on Automated Machine Learning (AutoML'24)},
+    booktitle = {Proceedings of the Third International Conference on Automated Machine Learning (AutoML'24)},
     bibtex_show={true},
     openreview = {MlB61zPAeR},
     note = {To appear},
