--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
     bibtex_show={true},
     openreview = {MlB61zPAeR},
     note = {To appear},
+    code = {https://github.com/releaunifreiburg/HPO-RL-Bench},
     abstract={Despite the undeniable importance of optimizing the hyperparameters of RL algorithms, existing
     state-of-the-art Hyperparameter Optimization (HPO) techniques are not frequently utilized by RL researchers.
     To catalyze HPO research in RL, we present a new large-scale benchmark that includes pre-computed reward curve
