--- a/_posts/2021-04-19-redirect.md
+++ b/_posts/2021-04-19-redirect.md
@@ -2,7 +2,7 @@
 layout: post
 title: A hike to Old Rag Mountain in Shenandoah National Park.
 date: 2024-03-16 7:30:00
-description: My second Old Rag hike trip with W&M friends.
+description: My second Old Rag hike trip with William & Mary.
 # redirect: https://bair.berkeley.edu/blog/2021/04/19/mbrl/
 categories: hiking-trips
 ---
